[gd_scene load_steps=2 format=3 uid="uid://dkhrvdtiinn75"]

[ext_resource type="Script" path="res://debugsceen.gd" id="1_av06s"]

[node name="DEBUGSCREEN" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_av06s")

[node name="ColorRect" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = -85.5
offset_right = 45.5
offset_bottom = 85.5
grow_horizontal = 2
grow_vertical = 2

[node name="MaxHealth" type="Label" parent="ColorRect"]
layout_mode = 2

[node name="HealthMult" type="Label" parent="ColorRect"]
layout_mode = 2

[node name="MoveSpeed" type="Label" parent="ColorRect"]
layout_mode = 2

[node name="MoveMult" type="Label" parent="ColorRect"]
layout_mode = 2

[node name="DamageMult" type="Label" parent="ColorRect"]
layout_mode = 2
